Fix pet containers to resize the image if it is too large or too small so they are not cropped

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -14,6 +14,9 @@ body {
 }
 
 .card-img-top {
+  width: 100%;
+  height: 200px;
+  object-fit: contain;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
 }
